fix overflow in contact section

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -26,8 +26,8 @@
   text-align: justify;
 }
 
+
 .skills-box {
-  
   max-width: 454px;
   height: 60px;
   position: relative;
@@ -43,7 +43,7 @@
 
 @keyframes scrollleft {
   to {
-    left: -456px;
+    transform: translateX(-456px);
   }
 }
 
@@ -56,7 +56,7 @@
   font-weight: 600;
   color: #666;
   position: absolute;
-  left: calc(180px * 6);
+  transform: translateX(calc(180px * 6));
   animation: scrollleft 15s linear infinite;
   display: flex;
   align-items: center;
